# hlibs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  base64.hpp  sha1.hpp  sonar-project.properties
include/: aes.hpp  base64.hpp  crc.hpp  fnv1.hpp  md5.hpp  sha1.hpp  sha2.hpp  sha256.hpp  utf8.hpp  uuid.hpp
test/: CMakeLists.txt  Makefile  aes_tests.cpp  base64_tests.cpp  crc_tests.cpp  fnv1_tests.cpp  main.cpp  md5_tests.cpp  sha1_tests.cpp  sha2_tests.cpp  test.vcxproj  tests.cpp  utf8_tests.cpp  uuid_tests.cpp
test/test.xcodeproj/: project.pbxproj
